--- a/assets/style.css
+++ b/assets/style.css
@@ -8,26 +8,19 @@ textarea{
   background: transparent;
   border: none;
   resize: none;
-  color: #000000;
   border-left: 1px solid black;
   padding: 10px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 18px;
 }
 
 .jumbotron {
   text-align: center;
   background-color: transparent;
   color: black;
-  border-radius: 0;
+  border-radius: 0%;
   border-bottom: 10px solid black;
-}
-
-.description{
-  white-space: pre-wrap;
-}
-
-.time-block{
-  text-align: center;
-  border-radius: 15px;
+  background-color:lightblue
 }
 
 .row {
@@ -44,28 +37,28 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color:lightgreen;
+  color: black;
 }
 
 .future {
-  background-color: #77dd77;
-  color: white;
+  background-color:skyblue;
+  color: black;
 }
 
-.saveBtn {
-  border-left: 1px solid black;
+button {
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06AED5;
-  color: white;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
 
-.saveBtn i:hover {
+button:hover {
   font-size: 20px;
-  transition: all .3s ease-in-out;
+  transition:linear;
+  background-color: lightblue;
 }
